@@ -19,6 +19,7 @@ Version 1.0.2 to be released
 - New #98: Added support to translate messages in different plural forms. Added CChoiceFormat. (Qiang)
 - New #104: Added support to encode traversable objects using JSON (Qiang)
 - New #111: Implemented nonobtrusive javascript "Get new image" link in CCaptcha (Qiang)
+- New #113: Enhanced CSort so that it is easier to be used with relational active record (Qiang)
 - New: Added CActiveRecord::getRelated() (Qiang)
 - New: Added 'return' option to HTML options in CHtml (Qiang)
 - New: Refactored CSS-dependent widgets by adding registerCssFile static methods (Qiang)
